[package]
name = "hashmap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.18", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hashmap_benchmarks"
harness = false
